--- a/simbe/Base.lproj/Main.storyboard
+++ b/simbe/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -198,7 +199,18 @@
                                             <constraint firstAttribute="width" constant="250" id="dP5-Zv-N9u"/>
                                             <constraint firstAttribute="height" constant="30" id="qd5-Gu-GHd"/>
                                         </constraints>
-                                        <state key="normal" title="완료"/>
+                                        <state key="normal" title="추가"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" name="AccentColor"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="addExpense:" destination="4Nf-X1-i74" eventType="touchUpInside" id="GXd-57-1M8"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uBp-Eb-wzT">
                                         <rect key="frame" x="290" y="322.5" width="114" height="30"/>
@@ -206,37 +218,69 @@
                                             <constraint firstAttribute="height" constant="30" id="XmS-6c-Sc4"/>
                                         </constraints>
                                         <state key="normal" title="계속"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" name="AccentColor"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="continueExpanse:" destination="4Nf-X1-i74" eventType="touchUpInside" id="deN-Qa-YIq"/>
+                                        </connections>
                                     </button>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v7Q-rk-9Ub">
-                                        <rect key="frame" x="70" y="130" width="334" height="100"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="r9b-CW-EWf"/>
-                                        </constraints>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cbj-AD-3Lo">
+                                        <rect key="frame" x="70" y="130" width="269" height="122.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                    </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zm2-wg-9yA">
+                                        <rect key="frame" x="344" y="130" width="60" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="AdZ-Eo-zHd"/>
+                                            <constraint firstAttribute="height" constant="30" id="UV5-9u-FUG"/>
+                                        </constraints>
+                                        <state key="normal" title="+"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" name="AccentColor"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="addDetailes:" destination="4Nf-X1-i74" eventType="touchUpInside" id="xn5-cA-9Zy"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="v7Q-rk-9Ub" firstAttribute="top" secondItem="eG1-tX-m3k" secondAttribute="top" id="0eM-e0-RJP"/>
                                     <constraint firstItem="ZlP-Xm-qbg" firstAttribute="leading" secondItem="T5H-DG-99Q" secondAttribute="leading" constant="20" id="1ao-rT-tpf"/>
                                     <constraint firstItem="hmC-Gy-yLA" firstAttribute="top" secondItem="T5H-DG-99Q" secondAttribute="top" constant="10" id="243-NO-afr"/>
                                     <constraint firstItem="BY6-Mr-KG5" firstAttribute="top" secondItem="Kz6-bH-7Fa" secondAttribute="bottom" constant="10" id="2ko-za-5lM"/>
+                                    <constraint firstItem="Zm2-wg-9yA" firstAttribute="leading" secondItem="cbj-AD-3Lo" secondAttribute="trailing" constant="5" id="2tc-6y-Ahl"/>
                                     <constraint firstItem="Wdd-B9-NDh" firstAttribute="leading" secondItem="Kz6-bH-7Fa" secondAttribute="trailing" constant="20" id="60J-pG-U3o"/>
                                     <constraint firstItem="HVk-2o-VwL" firstAttribute="leading" secondItem="BY6-Mr-KG5" secondAttribute="trailing" constant="20" id="8pi-UK-VpA"/>
                                     <constraint firstItem="eG1-tX-m3k" firstAttribute="leading" secondItem="BY6-Mr-KG5" secondAttribute="leading" id="DQf-UQ-cQa"/>
                                     <constraint firstItem="uBp-Eb-wzT" firstAttribute="centerY" secondItem="ZlP-Xm-qbg" secondAttribute="centerY" id="Fb0-Ex-vSm"/>
+                                    <constraint firstItem="cbj-AD-3Lo" firstAttribute="leading" secondItem="eG1-tX-m3k" secondAttribute="trailing" constant="20" id="MdW-M6-t3G"/>
                                     <constraint firstItem="Kz6-bH-7Fa" firstAttribute="top" secondItem="hmC-Gy-yLA" secondAttribute="bottom" constant="20" id="SJK-hn-bx3"/>
                                     <constraint firstAttribute="trailing" secondItem="uBp-Eb-wzT" secondAttribute="trailing" constant="10" id="Szf-Ra-v2S"/>
                                     <constraint firstItem="Wdd-B9-NDh" firstAttribute="top" secondItem="Kz6-bH-7Fa" secondAttribute="top" id="UVc-56-o5i"/>
-                                    <constraint firstAttribute="trailing" secondItem="v7Q-rk-9Ub" secondAttribute="trailing" constant="10" id="WTF-a0-SxE"/>
                                     <constraint firstItem="BY6-Mr-KG5" firstAttribute="leading" secondItem="Kz6-bH-7Fa" secondAttribute="leading" id="YJd-gs-O15"/>
-                                    <constraint firstItem="v7Q-rk-9Ub" firstAttribute="leading" secondItem="eG1-tX-m3k" secondAttribute="trailing" constant="20" id="Zfj-oj-7Q3"/>
+                                    <constraint firstItem="cbj-AD-3Lo" firstAttribute="top" secondItem="eG1-tX-m3k" secondAttribute="top" id="atr-fv-ee7"/>
                                     <constraint firstAttribute="bottom" secondItem="ZlP-Xm-qbg" secondAttribute="bottom" constant="10" id="dEF-d3-Bzr"/>
+                                    <constraint firstItem="cbj-AD-3Lo" firstAttribute="height" secondItem="T5H-DG-99Q" secondAttribute="height" multiplier="0.337931" id="hlA-fV-ToU"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zm2-wg-9yA" secondAttribute="trailing" constant="10" id="m1K-CL-BgY"/>
                                     <constraint firstAttribute="trailing" secondItem="hmC-Gy-yLA" secondAttribute="trailing" id="mzH-Vs-Six"/>
                                     <constraint firstItem="uBp-Eb-wzT" firstAttribute="leading" secondItem="ZlP-Xm-qbg" secondAttribute="trailing" constant="20" id="o5e-kd-Ni2"/>
                                     <constraint firstAttribute="trailing" secondItem="Wdd-B9-NDh" secondAttribute="trailing" constant="10" id="pB2-ee-UQd"/>
                                     <constraint firstItem="HVk-2o-VwL" firstAttribute="top" secondItem="BY6-Mr-KG5" secondAttribute="top" id="s9l-Ih-yam"/>
+                                    <constraint firstItem="Zm2-wg-9yA" firstAttribute="top" secondItem="eG1-tX-m3k" secondAttribute="top" id="soT-IU-VxC"/>
                                     <constraint firstItem="hmC-Gy-yLA" firstAttribute="leading" secondItem="T5H-DG-99Q" secondAttribute="leading" id="uCu-Ru-q36"/>
                                     <constraint firstItem="Kz6-bH-7Fa" firstAttribute="leading" secondItem="T5H-DG-99Q" secondAttribute="leading" constant="20" id="uhI-vT-1af"/>
                                     <constraint firstItem="eG1-tX-m3k" firstAttribute="top" secondItem="BY6-Mr-KG5" secondAttribute="bottom" constant="10" id="wKY-l5-KEp"/>
@@ -262,7 +306,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="dateLabel" destination="Wdd-B9-NDh" id="dI9-bg-Z7j"/>
-                        <outlet property="detailTextfield" destination="v7Q-rk-9Ub" id="EFY-Lg-dwe"/>
+                        <outlet property="detailTextView" destination="cbj-AD-3Lo" id="O6J-gH-f6r"/>
                         <outlet property="paymentTypeSegment" destination="hmC-Gy-yLA" id="dTS-EX-QPd"/>
                         <outlet property="priceLabel" destination="HVk-2o-VwL" id="Zb2-pM-6Za"/>
                         <outlet property="tableView" destination="lfW-2L-ap3" id="DTw-Xc-pHJ"/>
@@ -270,7 +314,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3J-gn-ze8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6474" y="165"/>
+            <point key="canvasLocation" x="6473.913043478261" y="164.73214285714286"/>
         </scene>
         <!--Item-->
         <scene sceneID="zwe-it-a96">
@@ -754,6 +798,12 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="separatorColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
